[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-phase-detector"
version = "0.1.0"
description = "Monthly Taiwan and US market phase dashboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "requests>=2.32.0",
  "pandas>=2.0.0",
  "openpyxl>=3.1.0",
  "xlrd>=2.0.1",
  "pypdf>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
